k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-disease-api
  namespace: default
  labels:
    app: heart-disease-api
spec:
  type: LoadBalancer
  selector:
    app: heart-disease-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
