k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heart-disease-api-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: heart-disease-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heart-disease-api
                port:
                  number: 80
